# mpw-hamster-examples

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp-examples/: .gitignore  CMakeLists.txt  Main.cpp  README.md
cpp-examples/race/: HamsterRaceGame.cpp  HamsterRaceGame.h  Main.cpp  RaceHamster.h
cpp-examples/race/ter/: race.ter
cpp-examples/rss-hamster/: blocking_queue.h  rss-hamster.cpp  rss-hamster.h
java-examples/: .gitignore  pom.xml
java-examples/src/main/java/: module-info.java
java-examples/src/main/java/de/unistuttgart/iste/sqa/oo/hamstersimulator/race/: HamsterRaceGame.java  Main.java  RaceHamster.java
race/: HamsterRaceGame.cpp  HamsterRaceGame.h  Race.cpp  RaceHamster.cpp  racehamster.h
race/ter/: looping.ter  race2.ter
